# HMChefApp-Backend

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  test.toml
.github/workflows/: lint.yml
app/: main.py
app/internal/: settings.py
app/models/: models.py
app/routes/: auth.py  recipes.py  upload.py
app/services/: auth.py  redis_hander.py  uploadthing_service.py
