[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.115.12",
    "passlib>=1.7.4",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "pylint>=3.3.6",
    "ruff>=0.11.5",
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "broad-exception-caught",
    "logging-fstring-interpolation",
]
